<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActivity">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:id="@+id/textViewMainMenu"
            android:layout_gravity="center_horizontal"
            android:autoText="false"
            android:inputType="none"
            android:text="@string/text_box_main"
            android:paddingBottom="@dimen/abc_text_size_headline_material" />

        <Button
            android:layout_width="250dp"
            android:layout_height="60dp"
            android:text="@string/button1"
            android:id="@+id/button1"
            android:layout_gravity="center_horizontal"
            android:textColor="#ff000000"
            android:layout_marginBottom="10dp"
            android:background="#fff08c35"
            android:onClick="sendToast"/>

        <Button
            android:layout_width="250dp"
            android:layout_height="60dp"
            android:text="@string/button2"
            android:id="@+id/button2"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="10dp"
            android:textColor="#ff000000"
            android:background="#fff08c35"
            android:onClick="sendToast"/>

        <Button
            android:layout_width="250dp"
            android:layout_height="60dp"
            android:text="@string/button3"
            android:id="@+id/button3"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="10dp"
            android:textColor="#ff000000"
            android:background="#fff08c35"
            android:onClick="sendToast"/>

        <Button
            android:layout_width="250dp"
            android:layout_height="60dp"
            android:text="@string/button4"
            android:id="@+id/button4"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="10dp"
            android:textColor="#ff000000"
            android:background="#fff08c35"
            android:onClick="sendToast"/>

        <Button
            android:layout_width="250dp"
            android:layout_height="60dp"
            android:text="@string/button5"
            android:id="@+id/button5"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="10dp"
            android:textColor="#ff000000"
            android:background="#fff08c35"
            android:onClick="sendToast"/>

        <Button
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:text="@string/button6"
            android:id="@+id/button6"
            android:layout_gravity="center_horizontal"
            android:padding="25dp"
            android:layout_marginBottom="10dp"
            android:textColor="#ffffffff"
            android:background="#ffcc0e3e"
            android:onClick="sendToast"/>
    </LinearLayout>
</RelativeLayout>
